Replace `Map.of` with `ImmutableMap.of` to ensure ordering